<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/predictions"
                android:layout_gravity="center_horizontal"
                android:textSize="30sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

           <ImageView
               android:id="@+id/details_image"
               android:layout_width="fill_parent"
               android:layout_height="300dp"
               android:layout_gravity="center_horizontal"
               android:layout_marginTop="10dp"
               android:layout_marginBottom="10dp"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@drawable/top_shadow_gradient"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prediction_1"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/monument_name1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Demo1"
                android:textSize="16sp"
                android:textColor="@color/black" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/top_shadow_gradient"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confidence"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/monument_confidence1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1"
                android:textSize="16sp"
                android:textColor="@color/black" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/top_shadow_gradient"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/monument_description1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Demo"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/monument_read1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:linksClickable="true"
                    android:text="@string/read_more"
                    android:textColor="@color/colorPrimaryDark" />

                <ImageButton
                    android:id="@+id/monument_tts1"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/tts"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/layout_divider"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/layout_divider"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prediction_2"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/monument_name2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Demo2"
                android:textSize="16sp"
                android:textColor="@color/black" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/top_shadow_gradient"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confidence"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/monument_confidence2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2"
                android:textSize="16sp"
                android:textColor="@color/black" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/top_shadow_gradient"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/monument_description2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Demo"
                android:textSize="16sp"
                android:textColor="@color/black" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/monument_read2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/read_more"
                    android:textColor="@color/colorPrimaryDark"
                    android:linksClickable="true" />

                <ImageButton
                    android:id="@+id/monument_tts2"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/tts"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/layout_divider"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/layout_divider"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prediction_3"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/monument_name3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Demo3"
                android:textSize="16sp"
                android:textColor="@color/black" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/top_shadow_gradient"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confidence"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/monument_confidence3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="3"
                android:textSize="16sp"
                android:textColor="@color/black" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/top_shadow_gradient"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/monument_description3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Demo"
                android:textSize="16sp"
                android:textColor="@color/black" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/monument_read3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/read_more"
                    android:textColor="@color/colorPrimaryDark"
                    android:linksClickable="true" />

                <ImageButton
                    android:id="@+id/monument_tts3"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/tts"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bottom_shadow_gradient"/>
    </LinearLayout>
</ScrollView>